[package]
name = "asusbat"
version = "0.2.1"
edition = "2021"
description = "Set battery charge limit on ASUS laptops on Linux with CLI"
repository = "https://github.com/pepa65/asusbat"
authors = ["github.com/pepa65 <pepa65@passchier.net>"]
license = "GPL-3.0-or-later"
keywords = ["ASUS", "battery", "charge", "charge-limit", "persist"]
categories = ["command-line-utilities"]

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/{version}/asusbat"
pkg-fmt = "bin"
target = "x86_64-unknown-linux-musl"
disabled-strategies = ["quick-install", "compile"]
target-family = "Linux"
target-arch = "X86_64"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5.11"
#const_format = "0.2.32"
regex = "1.11.1"
text-template = "0.1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
